[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pep739"
authors = [{name = "Dylan Baker", email = "dylan@pnwbakers.com"}]
version = "0.1.0"
description = """
  TypedDict stubs for the PEP 739 defined build-details.json
  """
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Typing :: Typed",
  "Typing :: Stubs Only",
]
keywords = [
  "typing",
  "pep739",
]

[project.urls]
Homepage = "https://github.com/dcbaker/pep739-types"
Issues = "https://github.com/dcbaker/pep739-types/issues"
Repository = "https://github.com/dcbaker/pep739-types.git"

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["pep739"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
include = ["pep739"]
